[tool.poetry]
name = "tiktoktrends"
version = "0.1.0"
description = ""
authors = ["avisionh <a_vision@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
